correct project listing overflow issue

--- a/src/Components/ProjectListing/style.css
+++ b/src/Components/ProjectListing/style.css
@@ -23,7 +23,7 @@
 
   .jumbotron {
     background-color: #3c6894;
-    height: 15rem;
+    min-height: 15rem;
     box-shadow: -4px 4px 1px 0px rgba(255, 255, 255, 0.5);
     margin-right: 10rem;
     margin-left: 10rem
@@ -50,7 +50,7 @@
     .jumbotron {
       margin-left: .5rem;
       margin-right: .5rem;
-      height: 26rem
+      min-height: 26rem;
     }
   
     .project-description {
